adding styles to button, header and navigation

--- a/index.html
+++ b/index.html
@@ -18,6 +18,26 @@
           alt="hamburger"
           class="header__image"
         />
+        <nav class="desktop-nav">
+          <ul class="desktop-nav__list">
+            <div class="desktop-nav__container">
+              <li class="desktop-nav__element">Product</li>
+              <img src="./images/arrow-light.svg" alt="" class="desktop-nav__img" />
+            </div>
+            <div class="desktop-nav__container">
+              <li class="desktop-nav__element">Company</li>
+              <img src="./images/arrow-light.svg" alt="" class="desktop-nav__img" />
+            </div>
+            <div class="desktop-nav__container">
+              <li class="desktop-nav__element">Connect</li>
+              <img src="./images/arrow-light.svg" alt="" class="desktop-nav__img" />
+            </div>
+          </ul>
+          <ul class="desktop-nav__form">
+              <li class="dekstop-nav__login">Login</li>
+              <li class="desktop-nav__signup">Sing up</li>
+          </ul>
+        </nav>
         <nav class="nav nav--noactive">
           <ul class="nav__list">
             <li class="nav__element" id="product">
