add desktop view

--- a/index.html
+++ b/index.html
@@ -22,20 +22,32 @@
           <ul class="desktop-nav__list">
             <div class="desktop-nav__container">
               <li class="desktop-nav__element">Product</li>
-              <img src="./images/arrow-light.svg" alt="" class="desktop-nav__img" />
+              <img
+                src="./images/arrow-light.svg"
+                alt=""
+                class="desktop-nav__img"
+              />
             </div>
             <div class="desktop-nav__container">
               <li class="desktop-nav__element">Company</li>
-              <img src="./images/arrow-light.svg" alt="" class="desktop-nav__img" />
+              <img
+                src="./images/arrow-light.svg"
+                alt=""
+                class="desktop-nav__img"
+              />
             </div>
             <div class="desktop-nav__container">
               <li class="desktop-nav__element">Connect</li>
-              <img src="./images/arrow-light.svg" alt="" class="desktop-nav__img" />
+              <img
+                src="./images/arrow-light.svg"
+                alt=""
+                class="desktop-nav__img"
+              />
             </div>
           </ul>
           <ul class="desktop-nav__form">
-              <li class="dekstop-nav__login">Login</li>
-              <li class="desktop-nav__signup">Sing up</li>
+            <li class="dekstop-nav__login">Login</li>
+            <li class="desktop-nav__signup">Sing up</li>
           </ul>
         </nav>
         <nav class="nav nav--noactive">
@@ -116,9 +128,16 @@
           alt="image of card"
           class="section__img"
         />
+        <img
+          src="./images/illustration-editor-desktop.svg"
+          alt=""
+          class="section__img-desktop"
+        />
       </seciton>
       <seciton class="section__container">
-        <h1 class="section__title">Introducing an extensible editor</h1>
+        <h1 class="section__title section__title-content">
+          Introducing an extensible editor
+        </h1>
         <p class="section__paragraph">
           Blogr features an exceedingly intuitive interface which lets you focus
           on one thing: creating content. The editor supports management of
@@ -128,7 +147,9 @@
         </p>
       </seciton>
       <seciton class="section__container">
-        <h1 class="section__title">Robust content management</h1>
+        <h1 class="section__title section__title-content">
+          Robust content management
+        </h1>
         <p class="section__paragraph">
           Flexible content management enables users to easily move through
           posts. Increase the usability of your blog by adding customized
@@ -141,7 +162,7 @@
       <div class="state__container">
         <img src="./images/cirlce.svg" alt="" class="state__circle" />
         <div class="state__descript">
-          <h2 class="state__title">State of the Art Infrastructure</h2>
+          <h2 class="state__title section__title-content">State of the Art Infrastructure</h2>
           <p class="state__paragraph">
             With reliability and speed in mind, worldwide data centers provide
             the backbone for ultra-fast connectivity. This ensures your site
@@ -159,7 +180,10 @@
           alt=""
           class="section__img"
         />
-        <h1 class="section__title">Free, open, simple</h1>
+        <img src="./images/illustration-laptop-desktop.svg" alt="" class="section__img-desktop">
+        <h1 class="section__title section__title-content">
+          Free, open, simple
+        </h1>
         <p class="section__paragraph">
           Blogr is a free and open source application backed by a large
           community of helpful developers. It supports features such as code
@@ -169,7 +193,7 @@
         </p>
       </section>
       <section class="section__container">
-        <h1 class="section__title">Powerful tooluing</h1>
+        <h1 class="section__title section__title-content">Powerful tooluing</h1>
         <p class="section__paragraph">
           Batteries included. We built a simple and straightforward CLI tool
           that makes customization and deployment a breeze, but capable of
